--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -361,7 +361,9 @@ hr {
 /* Media Queries
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 
-
+.recipes{
+  margin-top: 5rem;
+}
 
 /* Larger than mobile */
 @media (min-width: 400px) {}
